# glyph

./: Cargo.toml  notes.md  todo.md
.old/glyph-dispatch/: Cargo.toml
.old/plugins/operator-plugin/: Cargo.toml
docs/: glyph.drawio  notes.md  todo.md
glyph-client/: Cargo.toml
glyph-client/src/: main.rs
glyph-dispatch/: Cargo.toml
glyph-dispatch/src/: main.rs
glyph-server/: Cargo.toml
glyph-server/lib/glyph/: Cargo.toml
glyph-server/lib/glyph/src/: glyph.rs  tests.rs
glyph-server/src/: counter_glyph.rs  main.rs
glyph-server/test/: counter.toml
glyphs/counter-glyph/: Cargo.toml
glyphs/counter-glyph/src/: lib.rs
lib/channel-interface/: Cargo.toml
lib/channel-interface/src/: lib.rs
lib/glyph/: Cargo.toml
lib/glyph/src/: glyph.rs  lib.rs
lib/glyphic/: Cargo.toml
lib/glyphic/src/: glyphic.rs  lib.rs  tests.rs
lib/interpreter/: Cargo.toml
lib/interpreter/src/: lib.rs
plugins/input-classifier/: Cargo.toml
plugins/operator-plugin/src/: lib.rs
prompts/: classify_request
src/: lib.rs  util.rs
