[package]
name = "glyph-client"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"
serde = {version="1.0.217", features=["derive"]}
clap = {version="4.5.26", features = ["derive"]}
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "time", "net", "macros", "sync", "fs", "io-util"] }
channel-interface = {path="../lib/channel-interface"}
interpreter = {path="../lib/interpreter"}
futures = "0.3.31"
