[package]
name = "glyph-dispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
operator-plugin={path="../plugins/operator-plugin"}
reqwest = {version="0.12.12", features=["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread", "io-util", "io-std"] }
url = "2.5.4"
